--- a/ui/main.reel/_main.css
+++ b/ui/main.reel/_main.css
@@ -4,18 +4,11 @@
     min-height: 0;
 }
 
+/* content */
+
 .Main > main {
     flex: 1;
     display: flex;
-    flex-direction: column;
-    min-height: 0;
-    min-width:  0;
-}
-
-.Main-wrapper {
-    flex: 1;
-    display: flex;
-    min-height: 0;
     min-width:  0;
 }
 
@@ -27,9 +20,10 @@
 
 .Main-substitution {
     position: relative;
+    flex: 1;
     display: flex;
     flex-direction: column;
-    flex: 1;
+    min-width: 0;
     background-color: var(--primary--9);
 }
 
