--- a/ui/inspectors/inspector.reel/_inspector.css
+++ b/ui/inspectors/inspector.reel/_inspector.css
@@ -18,7 +18,7 @@
     align-items: center;
     flex-shrink: 0;
     justify-content: space-between;
-    height:  calc(3rem - 1px);
+    height:  3rem;
     /* font-size: 1.25rem; */
     padding: 0 1rem;
     background-color: var(--primary);
