edits colors on list icons

--- a/ui/controls/list.reel/list-item.reel/_list-item.css
+++ b/ui/controls/list.reel/list-item.reel/_list-item.css
@@ -63,15 +63,15 @@
     height: 1.9em;
     /* gives the size to the icon */
     margin-right: 1em;
-    color: currentColor;
+    color: var(--primary--2);
     transition: color .25s;
 
     @nest .ListItem:hover & {
-        color: var(--main-text-color);
+        color: var(--white);
     }
 
     @nest .ListItem.selected & {
-        color: var(--main-text-color);
+        color: var(--white);
     }
 }
 
