--- a/ui/controls/section-root.reel/_section-root.css
+++ b/ui/controls/section-root.reel/_section-root.css
@@ -12,7 +12,7 @@
     max-height: 15em;
     /* margin overrides for inspector spacing */
     margin: -1rem;
-    margin-bottom: .5rem;
+    margin-bottom: 0;
 
     @apply --flex-column;
 
