fixes bug with long string names in tasks

--- a/ui/dashboard/notifications.reel/notification-details.reel/_notification-details.css
+++ b/ui/dashboard/notifications.reel/notification-details.reel/_notification-details.css
@@ -1,6 +1,7 @@
 .Notification-details {
     background: var(--primary);
     font-size: .8em;
+    word-break: break-word;
 }
 
 .Notification-details main { padding: .5rem;}
