--- a/ui/dashboard/notifications.reel/notification.reel/alert-notification.reel/_alert-notification.css
+++ b/ui/dashboard/notifications.reel/notification.reel/alert-notification.reel/_alert-notification.css
@@ -8,6 +8,11 @@
     z-index: 1;
 }
 
+.AlertNotification.has-error {
+    background-color: color(var(--red) alpha(8%));
+}
+
+
 /* alert Levels */
 
 .AlertNotification.has-info:before     { background-color: var(--yellow-orange); }
