--- a/ui/sections/containers/inspectors/container.reel/_container.css
+++ b/ui/sections/containers/inspectors/container.reel/_container.css
@@ -1,9 +1,35 @@
 .Container {
-    min-width: 38rem;
+    min-width: 43rem;
 }
 
 .Container-inspector {
     display: flex;
     flex-direction: column;
     flex: 1;
+}
+
+/* Volume Table UNIQUE LAYOUT */
+
+.TableVolume .Table-cells > div:nth-child(1),
+.TableVolume .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(1) {
+    min-width: 6rem;
+}
+
+.TableVolume .Table-cells > div:nth-child(2),
+.TableVolume .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(2) {
+    min-width: 17rem;
+}
+
+.TableVolume .Table-cells > div:nth-child(3),
+.TableVolume .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(3) {
+    min-width: 10rem;
+}
+
+.TableVolume .Table-cells > div:nth-child(4),
+.TableVolume .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(4) {
+    min-width: 3rem;
+}
+
+.TableVolume .FieldTreeview > .Field {
+    margin-bottom: 0;
 }
