--- a/ui/controls/topology.reel/vdev.reel/_vdev.css
+++ b/ui/controls/topology.reel/vdev.reel/_vdev.css
@@ -2,7 +2,7 @@
     position: relative;
     border-bottom-left-radius:  4px;
     border-bottom-right-radius: 4px;
-    min-width: 5.5em;
+    min-width: 6em;
 
     &:before {
         position: absolute;
@@ -56,9 +56,10 @@
     border-bottom-right-radius: 4px;
     box-shadow: 0 1px 1px var(--shadow-1);
 
-    /* hacky magic number to space single drive at container center */
-
-    & .Grid-repetition .GridItem:only-child { margin-left: 1rem; }
+    & .Grid-repetition {
+        display: flex;
+        justify-content: center;
+    }
 }
 
 /******************
