adds ellipsis to main sidebar user and host

--- a/ui/main-sidebar/current-user-summary.reel/_current-user-summary.css
+++ b/ui/main-sidebar/current-user-summary.reel/_current-user-summary.css
@@ -18,13 +18,11 @@
     justify-content: center;
 }
 
-.CurrentUserSummary-host {
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    word-break: break-all;
-    word-break: break-word;
-    hyphens: auto;
-    word-spacing: -.25em;
-    margin-left:  .25em;
-    margin-right: .25em;
+.CurrentUserSummary-host,
+.CurrentUserSummary-user {
+    width: 100%;
+    padding: 0 .25rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
