Fix: 21443 - also improves table volume layout
Ticket: #21443

--- a/ui/controls/field-treeview.reel/_field-treeview.css
+++ b/ui/controls/field-treeview.reel/_field-treeview.css
@@ -29,14 +29,10 @@
 }
 
 .FieldTreeview-treeView {
-    position: absolute;
-    visibility: hidden;
-    opacity: 0;
+    display: none;
 
     @nest .FieldTreeview.is-expanded & {
-        position: relative;
-        visibility: visible;
+        display: block;
         margin-bottom: 1em;
-        opacity: 1;
     }
 }
