--- a/ui/dashboard/sideboard.reel/_sideboard.css
+++ b/ui/dashboard/sideboard.reel/_sideboard.css
@@ -44,22 +44,18 @@
 
 .Sideboard-toggleSideboard {
     position: absolute;
-    bottom: 1em;
-    left: 1em;
-    height: 2em;
-    width:  2em;
-    border-radius: 4px;
-    padding: .3em;
+    bottom: 1rem;
+    left: 1rem;
+    height: 2rem;
+    width:  2rem;
+    border-radius: var(--border-radius);
     outline: none;
-    border-color: transparent;
-    cursor: pointer;
-    visibility: visible;
-    opacity: 1;
+    background-color: var(--primary);
     transition: transform .5s cubic-bezier(.7,0,.3,1);
     z-index: 1;
-    border: 1px solid var(--primary--3);
+    /* border: 1px solid var(--primary--3); */
 
-    @nest .is-collapsed & { transform: translateX(-4em); }
+    @nest .is-collapsed & { transform: translateX(-4rem); }
 
     &:hover {
         color: var(--white);
@@ -84,4 +80,22 @@
 
 .Sideboard.is-collapsed .Sideboard-toggleSideboard svg {
     transform: rotateY(180deg);
+}
+
+/* Dropzone Sizing Hacks - should remove dropzone */
+
+.Sideboard .WidgetDropzone-wrapper,
+.Sideboard .WidgetDropzone-widgets,
+.Sideboard .WidgetDropzone-widget:not(:first-child),
+.Sideboard .montage-Slot,
+.Sideboard .Tasks,
+.Sideboard .Widget,
+.Sideboard .Scroller {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.Sideboard .WidgetDropzone-widgets {
+    padding-bottom: 3.5rem;
 }
