--- a/ui/sign-in.reel/_sign-in.css
+++ b/ui/sign-in.reel/_sign-in.css
@@ -1,5 +1,6 @@
 .SignIn {
     opacity: 0;
+    visibility: hidden;
     padding: 2em;
     position: absolute;
     display: flex;
@@ -10,14 +11,16 @@
     left:   0;
     right:  0;
     bottom: 0;
-    background-color: var(--primary--9);
     z-index: 1000;
-    transition: visibility .75s, opacity .25s .5s;
+    transition: visibility .5s cubic-bezier(.39,.32,.46,1.3),
+                opacity    .5s cubic-bezier(.39,.32,.46,1.3);
+
+    @nest .montage-Overlay--visible & {
+        opacity: 1;
+        visibility: visible;
+    }
 }
 
-.montage-Overlay--visible .SignIn {
-    opacity: 1;
-}
 
 .SignIn-content {
     position: relative;
@@ -27,29 +30,33 @@
     background-color: var(--primary--7);
     transform: scale(0);
     border-radius: 4px;
-    transition: transform .75s cubic-bezier(.62,-0.45,.93,.81);
+    transition: transform .5s cubic-bezier(.39,.32,.46,1.3);
     overflow: hidden;
+
+    /* needed to fix background-image bleed on border radius */
+
+    &:before {
+        position: absolute;
+        content: '';
+        top:    0;
+        left:   0;
+        right:  0;
+        bottom: 0;
+        z-index: -1;
+    }
+
+    /* error state */
+    @nest .SignIn.had-error & {
+        animation: denied .5s ease-in-out;
+    }
+
+    /* visible state */
+    @nest .montage-Overlay--visible & { transform: scale(1); }
+
 }
 
-/* needed to fix background-image bleed on border radius */
 
-.SignIn-content:before {
-    position: absolute;
-    content: '';
-    top:    0;
-    left:   0;
-    right:  0;
-    bottom: 0;
-    z-index: -1;
-}
 
-/* error state */
-
-.SignIn.had-error .SignIn-content { animation: denied .5s ease-in-out; }
-
-/* visible state */
-
-.montage-Overlay--visible .SignIn-content { transform: scale(1); }
 
 /* Logo */
 
