Hide container actions on creation
Ticket: #21643

--- a/ui/sections/containers/inspectors/container.reel/_container.css
+++ b/ui/sections/containers/inspectors/container.reel/_container.css
@@ -2,6 +2,10 @@
     min-width: 43rem;
 }
 
+.Container.is-new .Container-actions {
+    display: none !important;
+}
+
 .Container-inspector {
     display: flex;
     flex-direction: column;
