--- a/ui/sections/wizard/inspectors/volume.reel/_volume.css
+++ b/ui/sections/wizard/inspectors/volume.reel/_volume.css
@@ -7,3 +7,7 @@
 .Volume-volumeCreator .VolumeCreator-sidebar {
     display: none !important;
 }
+
+.Volume-volumeCreator .FieldCheckbox.encrypt {
+    display: inherit !important;
+}
