sets max-width for inspector titles, sets width for docker image, sets max width for list-item

--- a/ui/inspectors/inspector.reel/_inspector.css
+++ b/ui/inspectors/inspector.reel/_inspector.css
@@ -18,6 +18,7 @@
     padding: 0 1rem;
     background-color: var(--primary);
     border-bottom: 1px solid var(--separator-color);
+    min-width: 0;
 
     & button {
         color: var(--white);
@@ -30,6 +31,18 @@
             display: none;
             margin-left: 0;
         }
+    }
+}
+
+.Inspector-title {
+    flex: 1;
+    display: flex;
+    min-width: 0;
+
+    & > span {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 }
 
