optional buttons on inspector footer were not being shown because of bad css

--- a/ui/controls/inspector-footer.reel/_inspector-footer.css
+++ b/ui/controls/inspector-footer.reel/_inspector-footer.css
@@ -26,6 +26,10 @@
     overflow: hidden;
 }
 
+.Inspector-optionalButtons button {
+    display: block;
+}
+
 /* States ---------------------------------- */
 
 .InspectorFooter.is-visible { display: flex; }
