Add confirmation message to factory restore
Ticket: #21786

--- a/ui/inspectors/inspector.reel/_inspector.css
+++ b/ui/inspectors/inspector.reel/_inspector.css
@@ -194,4 +194,11 @@ confirmation
             visibility: visible;
         }
     }
+
+    @nest .other-confirmation-is-visible & {
+        &.other-confirmation {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
 }
