adds WIP binding for traffic-light pulsing

--- a/ui/controls/traffic-light.reel/_traffic-light.css
+++ b/ui/controls/traffic-light.reel/_traffic-light.css
@@ -1,5 +1,9 @@
 .TrafficLight {
     display: flex;
+
+    &.is-loading {
+        animation: pulse .5s infinite alternate;
+    }
 }
 
 .TrafficLight-light {
