--- a/ui/inspectors/calendar-task.reel/_calendar-task.css
+++ b/ui/inspectors/calendar-task.reel/_calendar-task.css
@@ -1,7 +1,6 @@
 .CalendarTask {
-    width: 21em;
+    width: 24rem;
     color: inherit;
-    min-width: 350px;
 }
 
 .CalendarTask-monthOptionDays .MultipleSelectGrid-option {
@@ -10,9 +9,3 @@
     height: 2.25em !important;
     line-height: 1.25em !important;
 }
-
-/* FIXME - hacky fix for width issue */
-.CalendarTask .ScrollviewContent:first-of-type {
-    min-width: 0;
-}
-
