treeview currentnode empty message should be centered

--- a/ui/controls/tree-view.reel/current-node.reel/_current-node.css
+++ b/ui/controls/tree-view.reel/current-node.reel/_current-node.css
@@ -11,8 +11,7 @@
 
 .CurrentNode-scrollview {
     position: relative;
-    display: flex;
-    min-height: 0;
+    @apply --flex-column;
 }
 
 /* parent node */
