moves help from cascading-list-item into viewers and inspectors using the info-box component

--- a/ui/controls/viewer.reel/_viewer.css
+++ b/ui/controls/viewer.reel/_viewer.css
@@ -10,6 +10,7 @@
     border-bottom: 1px solid var(--separator-color);
     background-color: var(--primary);
     display: flex;
+    align-items: center;
     flex-shrink: 0;
 
     & .Viewer-backButton {
