--- a/ui/drawer.reel/drawer-item.reel/_drawer-item.css
+++ b/ui/drawer.reel/drawer-item.reel/_drawer-item.css
@@ -5,6 +5,11 @@
 
 .DrawerItem {
     cursor: grab;
+
+    /* pushes off scroller boundary */
+    &:last-child {
+        padding-right: 1rem;
+    }
 }
 
 .DrawerItem > header {
@@ -19,16 +24,6 @@
     border-top-right-radius: 4px;
 }
 
-.DrawerItem-infoToggle {
-    display: none;
-    width:  2em;
-    height: 2em;
-    color: color(var(--grey-3) blackness(50%));
-    transition: color .2s ease-in-out;
-
-    &:hover { color: var(--grey-3);}
-}
-
 .DrawerItem main {
     position: relative;
     height: var(--drawer-height);
@@ -38,25 +33,16 @@
     border-bottom-right-radius: 4px;
     border: 2px solid var(--primary--6);
     border-top: none;
+    display: flex;
 }
 
 /* content container */
 .DrawerItem-content {
-    display: flex;
-    position: absolute;
-    transition: transform .25s ease-in-out;
+    flex: 1;
+    background-image: url("../../../assets/images/graph-placeholder.jpg");
+    background-size: cover;
 
-    @nest .has-toggled & {
-        transform: translateX(-50%);
+    @nest .is-bar-graph & {
+        background-image: url("../../../assets/images/graph-barChart.jpg");
     }
-}
-
-.DrawerItem-front,
-.DrawerItem-back {
-    width:  var(--drawer-width);
-    height: var(--drawer-height);
-}
-
-.DrawerItem-back {
-    padding: 1em;
 }
