--- a/ui/dashboard/widgets/widget.reel/_widget.css
+++ b/ui/dashboard/widgets/widget.reel/_widget.css
@@ -12,7 +12,7 @@
     box-shadow: 0px 0px 2px 2px color(var(--color-selected) a(0%));
     transition: box-shadow .25s ease-in-out;
 
-    @nest .drawer-is-open &:hover {
+    @nest .drawer-is-open .WidgetDropzone &:hover {
         box-shadow: 0px 0px 2px 2px var(--color-selected);
     }
 }
